--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,7 +43,8 @@ env:
   ECS_TASK_DEFINITION: task-definition.json
   # set this to the name of the container in the containerDefinitions section of your task definition
   CONTAINER_NAME: sdp_poc_application           
-
+  # open id connect
+  ROLE_ARN: arn:aws:iam::919188484580:role/sdp-poc-github-action-role
 
 permissions:
   contents: read
@@ -59,11 +60,11 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      uses: aws-actions/configure-aws-credentials@v1-node16
+      with:        
         aws-region: ${{ env.AWS_REGION }}
+        role-session-name: GitHubActions
+        role-to-assume: ${{ env.ROLE_ARN }}
 
     - name: Login to Amazon ECR
       id: login-ecr
