--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,6 +47,9 @@ env:
   ROLE_ARN: arn:aws:iam::919188484580:role/sdp-poc-github-action-role
 
 permissions:
+  # This is required for requesting the JWT
+  id-token: write
+  # This is required for actions/checkout
   contents: read
 
 jobs:
