--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,7 @@ env:
   # set this to your preferred AWS region, e.g. us-west-1
   AWS_REGION: ap-northeast-2
   # set this to your Amazon ECR repository name
-  ECR_REPOSITORY: 919188484580.dkr.ecr.ap-northeast-2.amazonaws.com/sdp_poc
+  ECR_REPOSITORY: sdp_poc
   # set this to your Amazon ECS service name           
   ECS_SERVICE: sdp-poc-application-service           
   # set this to your Amazon ECS cluster name
@@ -77,14 +77,14 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: latest #${{ github.sha }}
       run: |
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
